--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@remix-run/node": "^2.15.3",
     "@remix-run/react": "^2.15.3",
     "@remix-run/serve": "^2.15.3",
+    "bcrypt": "^5.1.1",
     "isbot": "^4.1.0",
+    "mongoose": "^8.10.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
