--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.8.2",
     "@remix-run/node": "^2.15.3",
     "@remix-run/react": "^2.15.3",
     "@remix-run/serve": "^2.15.3",
+    "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
     "isbot": "^4.1.0",
+    "mailersend": "^2.3.0",
+    "megajs": "^1.3.5",
+    "mock-aws-s3": "^4.0.2",
     "mongoose": "^8.10.1",
+    "nock": "^14.0.1",
+    "otplib": "^12.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5"
@@ -24,6 +33,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.15.3",
     "@types/bcrypt": "^5.0.2",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
